# rest-framework-django-ddd

./: .env  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
ddd/: manage.py
ddd/ddd/: asgi.py  settings.py  urls.py  wsgi.py
ddd/product/: models.py
ddd/product/application/: mediator.py
ddd/product/application/commands/: add_product_command_handler.py
ddd/product/application/queries/: get_product_command_handler.py
ddd/product/application/services/: product_services.py
ddd/product/domain/model/: product.py
ddd/product/domain/repository/: abstract_repository.py  product_repository.py
ddd/product/infraestructure/: abstract_repository_implement.py  product_repository_implement.py
ddd/product/migrations/: 0001_initial.py
ddd/product/presentation/: urls.py  views.py
tests/: test_api_product.py
